# ORI_coding

./: .gitignore  2  CMakeLists.txt  README.md  config.h.cmake  tags
Old_MultiFMS_0526/: Function.cpp  Function.h  Main.cpp  MultiFMS_0526.vcxproj  MultiFMS_0526.vcxproj.filters  TEST_DATA º≥∏Ì.txt  TEST_DATA º≥∏Ì.txt.bak  TEST_DATA1.txt  TEST_DATA1.txt.bak  TEST_DATA2.txt  TEST_DATA3.txt  TEST_DATA3.txt.bak  TEST_DATA4.txt  TEST_DATA4.txt.bak  TEST_DATA4_1.txt  TEST_DATA4_1.txt.bak  TEST_DATA4_2.txt  TEST_DATA5.txt  TEST_DATA5.txt.bak  TEST_DATA5_1.txt  TimeTable.xlsx  stdafx.h
Scheduling_DGLee_(1)/: DATA_3_10_20_1.txt  DATA_3_10_20_2.txt  DATA_3_10_20__4_3.txt  DATA_3_5_20_1.txt  DATA_3_5_20__2_1.txt  DATA_3_5_20__4_1.txt  DATA_5_10_40__4_1.txt  DATA_5_20_40__4_1.txt  DATA_7_20_20__4_1.txt  DATA_7_20_40__2_1.txt  DATA_7_20_40__4_1.txt  Function - ∫πªÁ∫ª.cpp  Function.cpp  Function.h  ReadMe.txt  Scheduling.cpp  Scheduling.sln  Scheduling.vcxproj  Scheduling.vcxproj.filters  output.txt  stdafx.cpp  stdafx.h  targetver.h
include/: Algorithm_LoadingUnloading.hpp  Algorithm_Palletizing.hpp  Algorithm_SetupAndMachining.hpp  Definition.h  Factory.hpp  Machine.hpp  Pallet.hpp  Part.hpp
input_data/: DATA_3_3_10_2_20_13__1.txt  DATA_Explanation_New.txt  DATA_explanation.txt  TEST_DATA4_2.txt  TEST_DATA_0808.txt  TEST_DATA_0822.txt  TEST_DATA_0822_1.txt  TEST_DATA_0901.txt  TEST_DATA_0909.txt  TEST_DATA_0920.txt  TEST_DATA_1006.txt  backup_TEST_DATA4_2.txt  largesize.txt
src/: Algorithm_LoadingUnloading.cpp  Algorithm_Palletizing.cpp  Algorithm_SetupAndMachining.cpp  (+5 more)
(+10 files in other folders)
